crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__return__at_top_level.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/return/at_top_level.lox
---
success: false
exit_code: 65
----- stdout -----

----- stderr -----
Error: Can’t return from top-level code.
   ╭─[craftinginterpreters/test/return/at_top_level.lox:1:1]
   │
 1 │ return "wat"; // Error at 'return': Can't return from top-level code.
   │ ──────  
   │          
───╯
