crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__return__in_method.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/return/in_method.lox
---
success: false
exit_code: 65
----- stdout -----

----- stderr -----
Error: Expect a binary operator.
   ╭─[craftinginterpreters/test/return/in_method.lox:8:12]
   │
 8 │ print Foo().method(); // expect: ok
   │            ─  
   │                
───╯
