crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__return__return_nil_if_no_value.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/return/return_nil_if_no_value.lox
---
success: true
exit_code: 0
----- stdout -----
nil

----- stderr -----
